tests/parsing/smtlib/v2.6/errors/154_symbol_list_1.expected
File "tests/parsing/smtlib/v2.6/errors/154_symbol_list_1.smt2", line 2, character 20-21:
2 | (define-sort foo (x _))
                        ^
Error while parsing a list of symbols, read the reserved word '_',
      but expected another symbol or a closing parenthesis.
